fixed some stuff and added products to the grid

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,9 @@
   padding: 1%;
   margin: 15%;
 }
+.ProductImage {
+  max-width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+}
